# shq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  main.cpp  reader.cpp  reader_test.cpp  sender.cpp  sender_test.cpp  shq.h  shq_new.h
example/: reader.cpp  writer.cpp
test/: deleter.cpp  file_lock.cpp  futex_cond_var.cpp  reader.cpp  sender.cpp  test.cpp
